--- a/data/IOT.htm
+++ b/data/IOT.htm
@@ -1,3 +1,8 @@
+const char *home_html PROGMEM = R"rawliteral(
+    <!DOCTYPE html>
+    %home_html%
+)rawliteral";
+
 const char *redirect_html PROGMEM = R"rawliteral(
     <!DOCTYPE html>
     <html lang="en">
