--- a/examples/minimal/app.htm
+++ b/examples/minimal/app.htm
@@ -5,6 +5,7 @@ const char app_config_fields[] PROGMEM = R"rawliteral(
 		<fieldset id="levels">
 			<legend>Application</legend>
 			<label for="_appState">State: </label><input type="text" id="_appState" name="_appState" value="%state_value%" required minlength="1" maxlength="32">
+			<label for="_level">Level: </label><input type="number" id="_level" name="_level" value="%level_value%" placeholder="1..100" value=%th_value% min="1" max="100" required step="1">
 		</fieldset>
 	</div>
 	)rawliteral";
@@ -46,6 +47,7 @@ const char home_html[] PROGMEM = R"rawliteral(
 			<div class="container">
 				<div class="home-group">
 					<div class="state_box" id="AppState">  </div>
+					<div class="state_box" id="Level">  </div>
 					<div class="link-row">
 						<p><a href='settings'>Settings</a></p>
 						<p><a href='/log' target='_blank'>Web Log</a></p>
